text align left

--- a/fanfiction/main.css
+++ b/fanfiction/main.css
@@ -19,7 +19,7 @@ h1{
     font-size:25px;
 }
 .text {
-    text-align: center;
+    text-align: left;
     width:800px;
     padding: 10px;
     font-size: 18px;
