--- a/fanfiction/chanhun/main.css
+++ b/fanfiction/chanhun/main.css
@@ -1,10 +1,10 @@
 ﻿/*main.css*/
 
 body {
-    background-color: #0100FF;
+    background-color: #050099;
     color: white;
     font-family: 'Do Hyeon', sans-serif;
-    font-size:30px;
+    font-size: 30px;
 }
 .reading {
     background-color: black;
